--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <a href="/index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <nav>
             <ul>
                 <li>
@@ -19,7 +19,7 @@
                     <a href="#">Portfolio</a>
                 </li>
                 <li>
-                    <a href="#">Contacs</a>
+                    <a href="#">Contacts</a>
                 </li>
             </ul>
         </nav>
@@ -84,22 +84,22 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./images/MakrGuerrero.jpg" alt="Photo Makr Guerrero" height="264" width="264">
-                    <h3>Makr Guerrero</h3>
+                    <img src="./images/MakrGuerrero.jpg" alt="Photo Mark Guerrero" height="260" width="264">
+                    <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/TomFor.jpg" alt="Photo Tom Ford" height="264" width="264">
+                    <img src="./images/TomFor.jpg" alt="Photo Tom Ford" height="260" width="264">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/CamilaGarcia.jpg" alt="Photo Camila Garcia" height="264" width="264">
+                    <img src="./images/CamilaGarcia.jpg" alt="Photo Camila Garcia" height="260" width="264">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/danielWilson.jpg" alt="Photo Daniel Wilson" height="264" width="264">
+                    <img src="./images/danielWilson.jpg" alt="Photo Daniel Wilson" height="260" width="264">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
@@ -108,7 +108,7 @@
 
     </main>
     <footer>
-        <a href="/index.html">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <p>
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
